# jump-to-fastapi

./: .env.sample  .gitignore  alembic.ini  pyproject.toml
app/: config.py  database.py  main.py  schemas.py
app/auth/: models.py  routes.py
app/common/database/: base.py  context.py  decorators.py  middlewares.py  session.py
app/common/database/migrations/: env.py
app/database/: __init__.py  base.py  decorators.py  middlewares.py  session.py
app/database/migrations/: env.py
app/pybo/: models.py  pybo_routes.py  pybo_service.py  routes.py  schemas.py  services.py
app/user/: exceptions.py  models.py  routes.py  schemas.py  services.py
front/: package-lock.json  package.json
front/src/: App.svelte
migrations/: env.py
server/: .gitignore  alembic.ini  database.py  main.py  pyproject.toml  schemas.py
server/migrations/: env.py
