[tool.poetry]
name = "jump-to-fastapi"
version = "0.1.0"
description = ""
authors = ["201 <kreme201@gmail.com>"]
readme = "README.md"
packages = [{ include = "jump_to_fastapi" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
